<resources>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开加载</string>
    <string name="pull_to_refresh_refreshing_label">正在加载…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">加载更多</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="app_name">Mi Band</string>
    <string name="action_exit">Exit</string>
    <string name="register">Sign up</string>
    <string name="login">Login</string>
    <string name="logining">Logging in ...</string>
    <string name="welcome">Hello</string>
    <string name="login_failed">Failed to login, please try again.</string>
    <string name="failed_enable_bt">Please turn on Bluetooth.</string>
    <string name="search_bracelet">Searching</string>
    <string name="connect_bracelet_now">Connecting ...</string>
    <string name="firmware_upgrade">Firmware update</string>
    <string name="bracelet_info_fw_version">"Firmware: %1$s
Agreement: %2$s"</string>
    <string name="bracelet_info_mac_address">"Name: %1$s
Address: %2$s"</string>
    <string name="bracelet_info_deviceid">%s</string>
    <string name="bracelet_info_battery">%s%%</string>
    <string name="app_info_version">"Version: %1$s
Agreement: %2$s"</string>
    <string name="description_list_icon">Item Icon</string>
    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="date_this_week">This week</string>
    <string name="date_last_week">Last week</string>
    <string name="date_this_month">This month</string>
    <string name="date_last_month">Last month</string>
    <string name="date_from_to">%1$s to %2$s</string>
    <string name="date_from_to_short">%1$s-%2$s</string>
    <string name="date_month_day">MMM d</string>
    <string name="date_year_month_day">MMM d, yyyy</string>
    <string name="date_month_day_short">%1$d/%2$d</string>
    <string name="date_month_day_week">%1$s %2$s</string>
    <string name="date_month_day_week_short">%1$d.%2$d %3$s</string>
    <string name="date_month">MMMM</string>
    <string name="date_year_month">MMM, yyyy</string>
    <string name="network_error">We are unable to connect you to the network, please check your network connection.</string>
    <string name="prev_step">Previous</string>
    <string name="next_step">Next</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Agree</string>
    <string name="set_sport_goal">Set Goal</string>
    <string name="alarm_once">Once</string>
    <string name="goals_push_none">No push notification.</string>
    <string name="goals_push_five">Achieved 50%</string>
    <string name="goals_push_nine">Achieved 90%</string>
    <string name="goals_push_ten">Achieved 100%</string>
    <string name="friends_search_tips">Mi Account/Username/Phone</string>
    <string name="friends_search">Search</string>
    <string name="friends_invite2">Invite</string>
    <string name="statistic_total">Total</string>
    <string name="statistic_day_average">Ave. Per Day</string>
    <string name="statistic_detail">Details</string>
    <string name="day_active_detail">Daily details</string>
    <string name="alarm">Alarm</string>
    <string name="unlock_screen">Screen Unlocking</string>
    <string name="about">About</string>
    <string name="about_copyright" />
    <string name="unit_kilometer">km</string>
    <string name="unit_meter">m</string>
    <string name="unit_calorie">cal</string>
    <string name="unit_step">steps</string>
    <string name="unit_hour">h</string>
    <string name="unit_min">min</string>
    <string name="unit_min_short">m</string>
    <string name="upgrade_tip">Update notification</string>
    <string name="hot_des">Energy</string>
    <string name="noti_bracelet_low_battery_title">Low power</string>
    <string name="noti_bracelet_low_battery_content">Less than 5% of power left, please charge.</string>
    <string name="noti_bracelet_low_battery_title_none">Mi Band has turned off.</string>
    <string name="noti_bracelet_low_battery_content_none">Connect to power</string>
    <string name="bt_operation_failed_tips">Bluetooth is not working properly, please try later.</string>
    <string name="multi_devices_info">Sorry, there are multiple Mi Bands nearby. You can try to move your Mi Band and phone 10 meters away from other Mi Bands, then search again.</string>
    <string name="multi_devices_title">Unable to pair.</string>
    <string name="search_bracelet_again">Search again</string>
    <string name="search_devices_info">Please put on Mi Band and stay close to your phone.</string>
    <string name="search_bracelet_ok">Found a Mi Band!</string>
    <string name="found_bracelet_info">"When Mi Band's lights start flashing, tap the band a few times to pair."</string>
    <string name="bind_bracelet_ok">Paired successfully.</string>
    <string name="device_not_response">"Lights aren't flashing?"</string>
    <string name="action_local_ota">SD card update</string>
    <string name="bracelet_not_found_title">Please connect to power.</string>
    <string name="bracelet_not_found_info">Please search again when you see one of the Mi Band lights flashes.</string>
    <string name="get_help">Need help</string>
    <string name="system_not_support_title">Not supportive.</string>
    <string name="system_not_support_info">"In order to use Mi Band, you need to update your phone system.
Only Android 4.4 or above versions support Mi Band."</string>
    <string name="system_low_title">Please update your system.</string>
    <string name="system_low_info">Please update to Android 4.4 or a higher version to support Mi Band.</string>
    <string name="bind_bracelet">Found Mi Band</string>
    <string name="bracelet_login_title">Hello, I am Mi Band.</string>
    <string name="bracelet_login_info">Mi Cloud will provide professional suggestions based on your activities and sleep performance.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cm">cm</string>
    <string name="congrats">Congrats!</string>
    <string name="start_use">Start</string>
    <string name="share">Share</string>
    <string name="person_info_finished_info">Mi Band has been set up successfully.</string>
    <string name="kg">kg</string>
    <string name="new_friend_cancel">Decline</string>
    <string name="new_friend_accept">Agree</string>
    <string name="search_devices_title">Search for Mi Band</string>
    <string name="share_blog_cancel">Cancel</string>
    <string name="share_blog_title">Post updates</string>
    <string name="share_blog_share">Post</string>
    <string name="share_blog_message_hint">Say something ...</string>
    <string name="share_blog_other">Share to</string>
    <string name="share_blog_weixin">WeChat</string>
    <string name="share_blog_pengyouquan">Moment</string>
    <string name="share_blog_qq_zone">QQ zone</string>
    <string name="share_blog_qq">QQ</string>
    <string name="share_blog_weibo">Weibo</string>
    <string name="distance">Distance</string>
    <string name="points_exchange">Reward credits</string>
    <string name="odo">Total distance</string>
    <string name="daily_sporty">Steps per day</string>
    <string name="unknown_location">Not located</string>
    <string name="km">km</string>
    <string name="cal">cal</string>
    <string name="step">steps</string>
    <string name="point">points</string>
    <string name="unknown_mili">My</string>
    <string name="s_mili">Mi Band</string>
    <string name="rename_mili">Name</string>
    <string name="reset_mili">Reset Mi Band</string>
    <string name="bind_new_mili">Pair with new Mi Band</string>
    <string name="unbind_mili">Unpair</string>
    <string name="smart_alarm_clock">Alarm</string>
    <string name="exit_login">Logout</string>
    <string name="exit_login_1">Are you sure to logout?</string>
    <string name="exit_app">Exit</string>
    <string name="exit_app_continue">Continue</string>
    <string name="exit_app_tips">"Are you sure to exit? 
All will be disconnected after exit."</string>
    <string name="set_mili_name">Name Mi Band</string>
    <string name="mili_name">Mi Band name</string>
    <string name="set_mili_name_ok">New name saved.</string>
    <string name="set_mili_name_fail">Failed to name your Mi Band.</string>
    <string name="mili_name_too_long">Name is too long, please change.</string>
    <string name="mili_rename_fail">"Failed to update Mi Band's name."</string>
    <string name="mili_unbind_question">Your phone will no longer have access to Mi Band data once unpaired.</string>
    <string name="share_to_title">Mi Band</string>
    <string name="share_to_content">Share life with Mi Band</string>
    <string name="share_goal_tips_succ">"Have a great plan?
Take your first step."</string>
    <string name="share_goal_tips_fail">Not far from hitting your goal.</string>
    <string name="person_info_goal_info">"According to studies, we suggest you to do at least 40 minutes workout every day. 
It is about 8000 steps of walk."</string>
    <string name="person_info_goal_info_young">"According to studies, we suggest you to do at least 60 minutes workout every day. 
It is about 12000 steps of walk."</string>
    <string name="set_person_goal">Set Goal</string>
    <string name="feedback">Feedback</string>
    <string name="smart_wake_up">Smart Alarm</string>
    <string name="smart_wake_up_info">"Please wake me up 30 minutes before set time. 
I would like to get up when my body is awake."</string>
    <string name="alarm_cycle">Repeat</string>
    <string name="login_failed_check_sys_time">Failed to login, please check your time setting and use the time provided by network.</string>
    <string name="everyday">Everyday</string>
    <string name="mon_fri">Mon. to Fri.</string>
    <string name="mon_sat">Mon. to Sat.</string>
    <string name="device_not_found_not_knocked">Please search for Mi Band again. You forgot to tap Mi Band when it flashes.</string>
    <string name="statistic">States</string>
    <string name="mili_unbind_question_content">Once you unpair Mi Band with your phone, you may pair another Mi Band with it.</string>
    <string name="mili_unbind_question_content_1">In addition, you are no longer able to unlock your screen with this Mi Band once you unpair it with your phone.</string>
    <string name="mili_reset_info">"We are about to clean up data and reset Mi Band to factory settings. 
Do you want to continue?"</string>
    <string name="mili_exit_login_info">"You are about to log out from current Mi Account.
Would you like to continue?"</string>
    <string name="mili_exit_login_info_continue">"Failed to sync, please check network connection. 
If you choose to exit, you will loss data that haven't been synced. Are you sure to exit?"</string>
    <string name="modify_signiture">Edit status</string>
    <string name="help_info_3">"If your Mi Band is paired with an existing phone and it's nearby, you can try to restart your phone to search again."</string>
    <string name="fw_failed_help_title">Firmware FAQ</string>
    <string name="fw_failed_help_title0">What is firmware?</string>
    <string name="fw_failed_help_tips0">Firmware is the software system that operates Mi Band device.</string>
    <string name="fw_failed_help_title1">Why do I need to update firmware?</string>
    <string name="fw_failed_help_tips1">"Update firmware can improve Mi Band's performance. It also will support device to run new features."</string>
    <string name="fw_failed_help_title2">What to do when I failed to update?</string>
    <string name="fw_failed_help_tips2">Please always make sure battery stays above 5%, and Mi Band is properly connected with your phone during updating process.</string>
</resources>