<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/bg_color_blue" android:padding="@dimen/mili_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="40.0dip">
        <ImageView android:id="@id/fw_help_back_btn" android:clickable="true" android:layout_width="40.0dip" android:layout_height="fill_parent" android:src="@drawable/arrow_back_bg" android:scaleType="centerInside" />
        <TextView android:textSize="@dimen/click_button_text_size" android:textColor="@color/title_color" android:gravity="center_vertical" android:id="@id/fw_help_back_txt" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/fw_failed_help_title" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/mili_margin" android:paddingRight="@dimen/mili_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/mili_margin" android:paddingBottom="@dimen/mili_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/click_button_text_size" android:textColor="@color/title_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fw_failed_help_title0" />
            <TextView android:textSize="@dimen/info_content_size" android:textColor="@color/content_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/fw_failed_help_tips0" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/click_button_text_size" android:textColor="@color/title_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fw_failed_help_title1" />
            <TextView android:textSize="@dimen/info_content_size" android:textColor="@color/content_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/fw_failed_help_tips1" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/mili_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip">
            <TextView android:textSize="@dimen/click_button_text_size" android:textColor="@color/title_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fw_failed_help_title2" />
            <TextView android:textSize="@dimen/info_content_size" android:textColor="@color/content_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/fw_failed_help_tips2" />
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/split_line" />
    <TextView android:textSize="@dimen/info_content_size" android:textColor="@color/content_color" android:gravity="center_vertical" android:paddingLeft="@dimen/mili_margin" android:paddingTop="10.0dip" android:paddingRight="@dimen/mili_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/help_info_3" />
</LinearLayout>